--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ Link: #2b6b4e
 }
 
 body {
-  background-color: #3D9970;
+  background-color: #3d9970;
   color: #060f0b;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 nav {
@@ -28,18 +28,20 @@ nav {
   position: fixed;
   top: 0;
   text-align: center;
-  font-family: 'Barlow Condensed', sans-serif;
+  font-family: "Barlow Condensed", sans-serif;
   padding-top: 20px;
 }
 
-nav a:link, a:visited {
+nav a:link,
+a:visited {
   padding: 30px;
   color: #fff;
   font-size: 33px;
-  text-decoration: none; 
+  text-decoration: none;
 }
 
-nav a:hover, a:active {
+nav a:hover,
+a:active {
   color: #2b6b4e;
 }
 
@@ -57,7 +59,7 @@ header {
 
 .name {
   flex-basis: 350px;
-  background-image: url(https://raw.githubusercontent.com/green-fox-academy/myfirstapp-syllabus/master/assets/first-website-header.png);
+  background-image: url("img/first-website-header.png");
   background-size: cover;
   background-position: center;
 }
@@ -66,7 +68,8 @@ header {
   flex-basis: 550px;
 }
 
-.intro p, .intro ul{
+.intro p,
+.intro ul {
   font-size: 22px;
   font-weight: 300;
   line-height: 1.6;
@@ -84,7 +87,7 @@ header {
 h1:first-child {
   padding: 280px 0 0 60px;
   font-size: 35px;
-  font-family: 'Barlow Condensed', sans-serif;
+  font-family: "Barlow Condensed", sans-serif;
   font-weight: bolder;
 }
 
@@ -92,8 +95,7 @@ h1 {
   padding-left: 60px;
   font-size: 100px;
   line-height: 0.9;
-  font-family: 'The Nautigal', cursive;
-  
+  font-family: "The Nautigal", cursive;
 }
 
 .flex {
@@ -101,7 +103,7 @@ h1 {
 }
 
 section {
-  font-family: 'Barlow Condensed', sans-serif;
+  font-family: "Barlow Condensed", sans-serif;
   position: relative;
   z-index: -1;
   flex-basis: 350px;
@@ -120,7 +122,7 @@ blockquote {
 }
 
 blockquote::before {
-  content: '”';
+  content: "”";
   font-size: 150px;
   position: absolute;
   transform: rotate(180deg);
@@ -128,7 +130,8 @@ blockquote::before {
   left: 10px;
 }
 
-p, ul {
+p,
+ul {
   padding-top: 25px;
   font-size: 16px;
   line-height: 1.4;
@@ -149,7 +152,7 @@ h2 {
   padding-bottom: 40px;
   padding-left: 20px;
   text-transform: uppercase;
-  font-size: 25px; 
+  font-size: 25px;
   font-weight: 500;
 }
 
@@ -164,7 +167,7 @@ h3 {
 
 h4 {
   padding-left: 20px;
-  font-size: 15px; 
+  font-size: 15px;
   font-weight: 500;
 }
 
